--- a/.github/workflows/create-infraestructure.yml
+++ b/.github/workflows/create-infraestructure.yml
@@ -36,7 +36,7 @@ jobs:
       uses: hashicorp/setup-terraform@v1
 
     - name: Terraform Init
-      run: terraform init -upgrade
+      run: terraform init -upgrade -reconfigure
 
     - name: Terraform Validate
       run: terraform validate
