--- a/.github/workflows/create-infraestructure.yml
+++ b/.github/workflows/create-infraestructure.yml
@@ -1,4 +1,4 @@
-name: AWS - Cria infraestrutura
+name: AWS - Plan & Apply infra
 
 on:
   workflow_dispatch:
@@ -16,16 +16,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
         aws-region: ${{ secrets.AWS_REGION }}
-
-    - name: Create S3 Bucket if it does not exist
-      run: |
-        if aws s3api head-bucket --bucket "${{ secrets.AWS_BUCKET_NAME }}" 2>/dev/null; then
-          echo "Bucket already exists."
-        else
-          aws s3api create-bucket --bucket "${{ secrets.AWS_BUCKET_NAME }}" --region "${{ secrets.AWS_REGION }}"
-        fi
 
     - name: Load environment variables
       uses: thaind0/envfile@v1
